ansible-k3s/编排文件/Ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: acc-svc
  labels:
    app: acc
spec:   
  type: NodePort      
  ports:
  - port: 80         
    targetPort: 18967           
    protocol: TCP
    nodePort: 30899
  selector:
    app: acc         
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acc-traefik   #名字
spec:
  rules:
  - host: acc.jxd   #域名
  - path: /         #根目录
    backend:
      serviceName: acc-svc    #svc名字
      servicePort: 80         #svc开放端口
